# ros2_icart_edu_workspace

./: .gitignore  Readme.txt  memo_lifecycle.txt
map/: map.pgm  map.yaml  mymap.pgm  mymap.yaml  mymap2.yaml
myscripts/: 000_launch_main_system.bash  000b_launch_main_system.bash  001_start_slam.bash  001b_teleop_only.bash  002_save_map.bash  003_make_wp.bash  004_navigate.bash  004a_localization.bash  004b_navigation.bash  004c_nav2.bash  005_initialpose.bash  com_activate_urg3d.bash  com_arno_nav2.bash  (+25 more)
src/edu_robot/: package.xml  setup.cfg  setup.py  setup.py.20251009
src/edu_robot/config/: params_default.yaml  params_default.yaml.bk2
src/edu_robot/edu_robot/: edu_robot.py  icart_lifecycle_wrapper.py  make_wp_joy.py  make_wp_joy.py.bk  pose_reader_node.py  teleop_lifecycle_wrapper.py  yp_spur_lifecycle_wrapper.py
src/edu_robot/edu_robot/old/: ypspur_icartmini_watchdog.py.bk
src/edu_robot/launch/: bringup_nav2.launch.py  bringup_sequenced.launch.py  icart.launch.py  icart_b.launch.py  keepout_filter.launch.py  laser_scan_merger.launch.py  laser_scan_merger_b.launch.py  make_wp.launch.py  robot_bringup_1.launch.py  robot_nav.launch.py  slam_async.launch.py  slam_sync.launch.py  static_transforms.launch.py  teleop.launch.py  teleop_b.launch.py  teleop_keyboard.launch.py  urg3d_node2.launch.py  urg3d_node2_b.launch.py  urg3d_node2_standalone.launch.py  urg_node2.launch.py  urg_node2_b.launch.py  yp_spur.launch.py  yp_spur_b.launch.py  yvt_to_scan.launch.py  yvt_to_scan_b.launch.py
src/edu_robot/launch/old/: yp_spur_icart.launch.py  yp_spur_icart.launch.py.bk1
(+19 files in other folders)
