# the original

# [develop]
# script_dir=$base/lib/edu_robot
# [install]
# install_scripts=$base/lib/edu_robot

# chatgpt created

[develop]
script_dir=$base/lib/edu_robot
[install]
install_scripts=$base/lib/edu_robot

[metadata]
name = edu_robot
version = 0.0.1

[options]
packages = find:
install_requires =
    setuptools

[options.package_data]
* = launch/*.py, config/*.yaml

[options.entry_points]
console_scripts =